Fix visibility

--- a/wp-content/themes/betheme-child/style129.css
+++ b/wp-content/themes/betheme-child/style129.css
@@ -108,8 +108,8 @@ Version: 2.0.1
   left: 0;
   right: 0;
   bottom: 10px;
-  opacity: 0.75;
-  font-style: italic;
+  font-weight: 600 !important;
+  text-shadow: 0px 0px 8px rgb(0, 0, 0);
 }
 
 .trailer_box .desc > .line {
